# skylink

./: .env  .gitignore  CHANGELOG.md  MEMO-v4-ais-plan.md  MEMO-v4-recap.md  README.md  docker-compose-0.yml  docker-compose-fanout.yml  docker-compose.yml  docker-compose.yml-ha  docker-compose.ymlbak  haproxy.cfg  haproxy.cfgfail  index.html  package-lock.json  podman-compose.ymlbak  verify_fix.sh  workflow.sh
about/: API.md  DASHBOARD.md  MEMO-2026-04-06-readsb-source.md  MEMO-2026-04-07-ai-platform-strategy.md  MEMO-2026-04-07-frontend-strategy.md  MEMO-2026-04-22-status.md  MEMO-v3-backend.md  MEMO-v3-feature-comparison.md  MEMO-v4-ais-plan.md  MEMO-v4.3-engine.md  MEMO-v4.5-release.md  PLAN-tiered-endpoints.md
benchmark/: backend_bench.sh  before_after.js  perf_benchmark.js
deploy/: .env.example
docs/: MEMO-2026-04-06-decision-rust-rewrite.md  MEMO-2026-04-06-readsb-revamp.md  MEMO-2026-04-06-scaling-strategy.md  (+3 more)
skylink-core/: API.md  Cargo.toml  Dockerfile  README.md  V3_PLAN.md  docker-compose.direct.yml  docker-compose.yml  nginx.conf  skylink.toml
skylink-core/src/: aircraft.rs  beast.rs  bincraft.rs  binvessel.rs  compact.rs  config.rs  feed.rs  geojson.rs  main.rs  mcp.rs  mode_s.rs  output.rs  pb.rs  ws.rs  ws_ais.rs  ws_unified.rs
skylink-core/src/ais/: decoder.rs  mod.rs  nmea.rs  vessel.rs
skylink-core/src/api/: json_builder.rs  mod.rs
skylink-core/src/beast/: ingest.rs  mod.rs  parser.rs
skylink-core/src/decode/: mod.rs  mod_s.rs
skylink-core/src/output/: beast_out.rs  mod.rs
skylink-core/src/state/: mod.rs  reaper.rs
(+46 files in other folders)
