[package]
name = "skylink-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
adsb_deku = "0.7"
dashmap = "6"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1"
tower-http = { version = "0.6", features = ["cors"] }

[profile.release]
opt-level = 3
lto = true
