[package]
name = "skylink-core"
version = "0.4.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip"] }
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1"
parking_lot = "0.12"
zstd = "0.13"
toml = "0.8"
prost = "0.13"

[build-dependencies]
prost-build = "0.13"

[profile.release]
opt-level = 3
lto = true
